added owner to app.json

--- a/app.json
+++ b/app.json
@@ -39,6 +39,7 @@
             "eas": {
                 "projectId": "e48ed7b0-aa5f-4ad8-b9cc-065378a45e95"
             }
-        }
+        },
+        "owner": "farazbukhari"
     }
 }
